- added: `SchemaOptions.success()` alias to `callback(SUCCESS(value))`
- added: `controller.success()` alias to `controller.json(SUCCESS(value))`
- added: `NOSQL('users').backups([filter(doc)], callback(err, response))` returns all backups
- added: `AUTH(fn)` is an alias to `F.onAuthorize = fn`
- added: `CORS()` alias to `F.cors()`
- added: `DatabaseBuilder.paginate(page, limit)`

- updated: `sitemap` routing can contain an additional path, e.g. `#sitemapid/path/`
- updated: `F.localize()` supports sitemap routing
- updated: `F.merge()` supports sitemap routing
- updated: `F.map()` supports sitemap routing
- updated: `F.http(mode, [options], [middleware(listen)])` added a new argument `middleware`
- updated: `debug.js` now reads directories according to the config (author: @luoage)
- updated: config parser supports `config` sub-type
- updated: `controller.$exec()` --> `callback` is by default `controller.callback()`
- updated: `F.localize()` has enabled `compression` by default
- updated: HTTP server is listening after the framework is completely loaded
- updated: (IMPORTANT) HTTP cache in dynamic content and static files

- renamed: `allow-handle-static-files` to `allow-static-files`

- fixed: `JSON` type in Total.js schemas
- fixed: responding on `range` header
- fixed: (IMPORTANT) `U.ls2()`
- fixed: `F.rmdir` removes all files and directories
- fixed: Date formatting with `a` value
- fixed: `F.path.mkdir()` on Windows (author: @molda)
- fixed: `F.restore()` on Windows (author: @molda)
- fixed: `MODEL()`, `MODULE()`, `INCLUDE()` now are direct aliases
- fixed: unit testing (author: @ckpiggy)
- fixed: a check for maximum length of request data
- fixed: `ArrayBuffer` in webosocket
- fixed: (IMPORTANT) `DatabaseBuilder.in()`
- fixed: NoSQL filtering with `or`
- fixed: NoSQL multiple updates
- fixed: NoSQL sorting of boolean values in larger dataset
- fixed: external static routing in view engine on Windows
- fixed: empty localization in view engine e.g. `@()`